<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_name" translatable="false">BlueLight-PMMP</string>
	
    <string name="activity_main" translatable="false">BlueLight-PMMP</string>
    <string name="activity_console">Console</string>
	
    <string name="button_send">Send</string>
    <string name="button_stop">Stop Server</string>
    <string name="button_start">Start Server</string>
    <string name="button_mount">Mount Java Library(ROOT)</string>

    <string name="check_nukkit">Nukkit</string>
    <string name="check_pocketmine">PocketMine</string>
    <string name="check_ansi">Enable ANSI support</string>
    <string name="check_kusud">Use ku.sud to request root</string>

    <string name="message_copied">Copied.</string>
    <string name="message_done">Done.</string>
    <string name="message_running">is running</string>
    <string name="message_tap_open">Tap to open Pocket Server</string>
    <string name="message_installing">Installing,Please wait...</string>
    <string name="message_downloading">Downloading %s ...</string>
    <string name="message_install_fail">Install failed:</string>
    <string name="message_install_success">Install successfully.</string>
    <string name="message_install_fail_path">Install failed,please put "nukkit_library.tar.gz" to</string>
    <string name="message_no_artifacts">No artifacts found.</string>
    <string name="message_select_repository">Please select %s repository</string>
    
    <string name="label_management">Server Management</string>
	<string name="label_type">Server Type</string>
	<string name="label_console">Console Customize</string>
	<string name="label_console_fontsize">Font Size:</string>
	<string name="label_pocketMine_to">Put PocketMine-MP.phar or src folder to /sdcard/PocketMine</string>
	<string name="label_nukkit_to">Put your Nukkit.jar to /sdcard/Nukkit</string>
	
	<string name="menu_console">Console</string>
    <string name="menu_kill">Kill server</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_install_php">Install PHP</string>
    <string name="menu_install_php7">Download &amp; Install PHP7</string>
    <string name="menu_install_java">Install Java</string>
    <string name="menu_download">Download server</string>
    <string name="unknown_host">Can\'t connect to Server</string>
    <string name="menu_delete_server">Delete Server</string>
    <string name="menu_backup_server">Backup Server</string>
    <string name="menu_hp">BlueLight\'s HP</string>
    <string name="menu_twitter" >Twitter(haniokasai)</string>
    <string name="menu_bl_twitter">Twitter(BlueLight)</string>
    <string name="menu_help">Help</string>
    <string name="message_deleting">Deleting</string>
    <string name="message_delete_success">Delete successfully</string>
    <string name="message_delete_failed">Delete failed</string>
    <string name="dialog_delete">Delete Server?</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-/</string>
    <string name="twitter_hani">https://twitter.com/haniokasai_en</string>
    <string name="message_backup_fail">Backup failed</string>
    <string name="message_backuping">Backuping...</string>
    <string name="message_backup_success">Backup successfly!</string>
</resources>
