<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:ads="http://schemas.android.com/apk/res-auto">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="15dip">

			<TextView
				style="@style/ListTitleText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dip"
				android:text="@string/label_management"/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dip"
				android:orientation="horizontal">

				<Button
					android:id="@+id/button_start"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/button_start"/>

				<Button
					android:id="@+id/button_stop"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/button_stop"/>

			</LinearLayout>

			<TextView
				style="@style/ListTitleText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dip"
				android:text="@string/label_type"/>

			<CheckBox
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:layout_marginBottom="10dp"
				android:id="@+id/check_ansi"
				android:text="@string/check_ansi"/>

			<TextView
				style="@style/ListTitleText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dip"
				android:text="@string/label_console"/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginBottom="10dp">

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal">

					<TextView
						android:layout_height="wrap_content"
						android:text="@string/label_console_fontsize"
						android:layout_width="wrap_content"
						android:layout_gravity="center"/>

					<SeekBar
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:id="@+id/seekbar_fontsize"/>

				</LinearLayout>

			</LinearLayout>

			<com.google.android.gms.ads.AdView
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_alignParentBottom="true"
				ads:adSize="MEDIUM_RECTANGLE"
				ads:adUnitId="@string/banner_ad_unit_id">
			</com.google.android.gms.ads.AdView>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/label_pocketMine_to"/>


		</LinearLayout>

	</ScrollView>

	<TextView
		android:layout_height="wrap_content"
		android:text="Released by haniokasai.The main code is taken from https://github.com/FENGberd/MinecraftPEServer."
		android:layout_width="match_parent"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:layout_marginBottom="10dp"/>

</RelativeLayout>

